tested against windows WSL amiga build

--- a/libde265/CMakeLists.txt
+++ b/libde265/CMakeLists.txt
@@ -30,6 +30,7 @@ if(AMIGA)
 	# turn SDL examples as off
 	option(ENABLE_SDL "Enable SDL" OFF)
 	add_definitions(-O2 -m68060 -mhard-float -ffast-math -save-temps)
+	add_definitions(-DHAVE_ALLOCA_H=1)
 else()
 	# vf test
 	#add_definitions(-funsigned-char -ansi)
