--- a/mame-triumph/src/mame037b/CMakeLists.txt
+++ b/mame-triumph/src/mame037b/CMakeLists.txt
@@ -8,10 +8,7 @@ set(C_STANDARD 11)
 project(MameLib LANGUAGES C CXX VERSION 1.0)
 
 if(AMIGA)
-
-	add_definitions(-O2 -m68060 -mhard-float -ffast-math -save-temps )
-	add_definitions(-std=c11)
-	
+	add_definitions(-O2 -m68060 -mhard-float -ffast-math -save-temps )	
 endif()
 
 set(ZLIBPATH "../../../zlib")
@@ -27,6 +24,8 @@ set(MAME_CORE_SRC
 	src/version.cpp src/info.cpp src/audit.cpp src/datafile.cpp 
     src/state.cpp src/png.cpp src/artwork.cpp src/unzip.cpp 
 
+	src/driver.cpp
+
 	src/profiler.cpp src/cheat.cpp src/hiscore.cpp 
 	src/input.cpp src/inptport.cpp 
     src/mame.cpp src/usrintrf.cpp src/ui_text.cpp 
@@ -35,7 +34,14 @@ set(MAME_CORE_SRC
 	src/cpuintrf.cpp src/memory.cpp src/timer.cpp 
 	src/scanline.cpp 
 #	$(sort $(CPUOBJS)) 
-	src/sndintrf.cpp src/sound/streams.cpp src/sound/mixer.cpp 
+	src/sndintrf.cpp
+
+#re?    src/romcmp.cpp
+#re?  src/network.cpp
+
+
+	src/sound/streams.cpp
+	src/sound/mixer.cpp
 #	$(SOUNDOBJS)
 	src/machine/z80fmly.cpp src/machine/6821pia.cpp 
 	src/machine/8255ppi.cpp 
@@ -43,6 +49,15 @@ set(MAME_CORE_SRC
 	src/vidhrdw/avgdvg.cpp src/machine/mathbox.cpp 
 	src/machine/ticket.cpp src/machine/eeprom.cpp 
 	src/sound/votrax.cpp
+
+	src/artwork.h   src/drawgfx.h   src/input.h         src/network.h   src/sndintrf.h      src/ui_text.h
+	src/audit.h     src/driver.h    src/legacy.h        src/osdepend.h  src/sprite.h        src/unzip.h
+	src/cheat.h     src/gfxobj.h    src/mame.h          src/palette.h   src/state.h         src/usrintrf.h
+	src/common.h    src/hiscore.h   src/memory.h        src/png.h       src/tilemap_draw.h
+	src/cpuintrf.h  src/info.h      src/memory_read.h   src/profiler.h  src/tilemap.h
+	src/datafile.h  src/inptport.h  src/memory_write.h  src/scanline.h  src/timer.h
+
+
 	)
 set(MAME_CPU_SRC
 
@@ -53,7 +68,7 @@ set(MAME_SOUND_SRC
 	)	
 add_library( mamecore STATIC ${MAME_CORE_SRC} ${MAME_CPU_SRC} ${MAME_SOUND_SRC} )
 set_property(TARGET mamecore PROPERTY C_STANDARD 11)
-
+set_property(TARGET mamecore PROPERTY CXX_STANDARD 11)
 set(MAME_INCLUDE_DIRS "src" "src/odx" )
 
 target_include_directories(mamecore PUBLIC ${MAME_INCLUDE_DIRS} ${ZLIBPATH} )
