--- a/mame-triumph/src/mame037b/src/CMakeLists.txt
+++ b/mame-triumph/src/mame037b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-#  done for old triumph amiga mame.
+#  done in 2024 to adapt Mame4Allv0.37 to old triumph Amiga Mame.
 
 cmake_minimum_required (VERSION 3.1)
 
@@ -20,10 +20,6 @@ set(MAME_CORE_SRC
 	version.cpp info.cpp audit.cpp datafile.cpp
     state.cpp png.cpp artwork.cpp unzip.cpp
 
-#original file:	driver.cpp
-	#version more prone to be reconfigured
-	driver_mv.cpp
-
 	profiler.cpp cheat.cpp hiscore.cpp
 	input.cpp inptport.cpp
     mame.cpp usrintrf.cpp ui_text.cpp
@@ -31,12 +27,10 @@ set(MAME_CORE_SRC
 	drawgfx.cpp palette.cpp common.cpp
 	cpuintrf.cpp memory.cpp timer.cpp
 	scanline.cpp
-#	$(sort $(CPUOBJS)) 
 	sndintrf.cpp
 
 	sound/streams.cpp
 	sound/mixer.cpp
-#	$(SOUNDOBJS)
 	machine/z80fmly.cpp machine/6821pia.cpp
 	machine/8255ppi.cpp
 	vidhrdw/generic.cpp vidhrdw/vector.cpp
@@ -54,14 +48,25 @@ set(MAME_CORE_SRC
 
 	)
 
-add_library( mamecore STATIC ${MAME_CORE_SRC} ${MAME_DRIVERS_SRC} ${MAME_CPU_SRC} ${MAME_SOUND_SRC} )
-set_property(TARGET mamecore PROPERTY C_STANDARD 11)
-set_property(TARGET mamecore PROPERTY CXX_STANDARD 11)
-#no, odx is an arm machine. set(MAME_INCLUDE_DIRS "src" "odx" )
 set(MAME_INCLUDE_DIRS "src" "../../amiga" ".")
 
+add_library( mamecore STATIC ${MAME_CORE_SRC} )
+set_property(TARGET mamecore PROPERTY C_STANDARD 11)
+set_property(TARGET mamecore PROPERTY CXX_STANDARD 11)
 target_include_directories(mamecore PUBLIC ${MAME_INCLUDE_DIRS} ${ZLIBPATH} )
-target_compile_definitions(mamecore PUBLIC INLINE=inline )
+target_compile_definitions(mamecore PUBLIC INLINE=inline ${CPU_DEFS} )
+
+add_library(mamedrivers STATIC driver_modules.cpp ${MAME_DRIVERS_SRC} ${MAME_SOUND_SRC} ${MAME_CPU_SRC} )
+set_property(TARGET mamedrivers PROPERTY C_STANDARD 11)
+set_property(TARGET mamedrivers PROPERTY CXX_STANDARD 11)
+target_include_directories(mamedrivers PUBLIC ${MAME_INCLUDE_DIRS} ${ZLIBPATH} )
+# -fsingle-precision-constant
+target_compile_options(mamedrivers PUBLIC -fpermissive -Wno-narrowing )
+target_compile_definitions(mamedrivers PUBLIC INLINE=inline ${CPU_DEFS} )
+
+	# add_compile_options( )
+#target_compile_definitions(mamecore PUBLIC INLINE=inline )
+
 
 ## generate zconf.h
 #configure_file(	${CMAKE_CURRENT_SOURCE_DIR}/../zlib/zconf.h.cmakein
