--- a/mame-triumph/src/amiga/CMakeLists.txt
+++ b/mame-triumph/src/amiga/CMakeLists.txt
@@ -2,20 +2,13 @@
 
 cmake_minimum_required (VERSION 3.1)
 
-option(TINY_COMPILE "smaller compile including only one driver" OFF)
-option(NEOFREE "do not compile neo" ON)
-option(NEOMAME "compile neo" OFF)
-
-#SET(ASM_OPTIONS "-x assembler-with-cpp")
-#SET(CMAKE_ASM_FLAGS "${CFLAGS} ${ASM_OPTIONS}" )
-
 set(CXX_STANDARD 11)
 set(C_STANDARD 11)
 project(AmigaTriumphMame LANGUAGES C CXX VERSION 1.0)
 
 if(AMIGA)
 
-	add_definitions(-O2 -m68060 -mhard-float -ffast-math -save-temps -fno-rtti )
+	add_definitions(-O2 -m68060 -mhard-float -ffast-math -save-temps -fno-rtti -fno-exceptions )
 	
 endif()
 
@@ -57,7 +50,7 @@ set_property(TARGET ${PROGNAME} PROPERTY C_STANDARD 11)
 target_compile_definitions(${PROGNAME} PUBLIC MAMEVERSION=37 )
 
 # the static libs that are part of this repo: 
-target_link_libraries(${PROGNAME} PUBLIC mamecore z)
+target_link_libraries(${PROGNAME} PUBLIC mamedrivers mamecore  z)
 
 # the extra original static libs furnished by triumph,"moo db" is a database used for config:
 target_link_directories(${PROGNAME} PUBLIC "../../lib")
