faulty cgxhooks lib to be replaced, keyboard alive but not optimized

--- a/mame-triumph/src/amiga/CMakeLists.txt
+++ b/mame-triumph/src/amiga/CMakeLists.txt
@@ -28,6 +28,7 @@ set(AMIGA_SRC
 	gui_mui.cpp
 	gui_gadtools.cpp
 	config_moo.cpp
+	cgxhooks_re.c
 #	file.cpp
 	audio.cpp
 	video.cpp
@@ -61,7 +62,7 @@ target_link_libraries(${PROGNAME} PUBLIC mamecore z)
 # the extra original static libs furnished by triumph,"moo db" is a database used for config:
 target_link_directories(${PROGNAME} PUBLIC "../../lib")
 target_include_directories(${PROGNAME} PUBLIC "../../include" )
-target_link_libraries(${PROGNAME} PUBLIC moo mood cgxhooks )
+target_link_libraries(${PROGNAME} PUBLIC moo mood )
 #add_library(${PROGNAME} PUBLIC OBJECT IMPORTED  ../../c2p.s.o ../../gfx.s.o)
 
 target_include_directories(${PROGNAME} PUBLIC "../mame037b/src")
